--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Item</h1>
 
-<%= render 'form', item: @item %>
+<%= render 'form', item: @item, list: @list %>
 
-<%= link_to 'Back', items_path %>
+<%= link_to 'Back', lists_path %>
