--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <div class="content">
+        <% if notice %>
+          <p id="notice"><%= notice %></p>
+        <% end %>
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
